# Crown-Card

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: economics.yaml  scenarios.yaml  simulation.yaml  underwriting.yaml
crown_card/: __init__.py  __main__.py  config.py  economics.py
crown_card/pipeline/: __init__.py  onboarding.py  schema.py  seed.py
crown_card/scenarios/: __init__.py  cac_model.py  cash_flow.py
crown_card/simulations/: __init__.py  monte_carlo.py
tests/: test_revenue_share.py  test_simulation.py  test_underwriting.py
