[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crown-card"
version = "0.1.0"
description = "Data infrastructure and financial modeling backend for Crown, a student credit card."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
crown-card = "crown_card.__main__:cli"

[tool.setuptools.packages.find]
include = ["crown_card*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
